[FIX] website: use span to show translation state of el with background
When buttons (`a.btn` elements) are translated inline, or badges
(`span.s_badge`), the background color that shows the status of the
translation appears under the background of the button/badge. The status
is thus only visible on the surrounding text, and completely invisible
when the button is alone (unless it has a transparent background).

This commit adds a plugin in translate mode which adds a span with the
color of the translation status in the problematic elements if they are
inside a translation span and have a background color.

Steps to reproduce:
- Open website builder
- Drop the `s_banner` snippet (or add a button by typing `/button`)
- Add a second language
- Open in translate mode
- Bug: the text of the button does not have the green/yellow highlight
  that shows the translation state (technically, it is hidden under the
  background of the button, which you can see if you set a transparent
  background on the button)

`o_translate_inline` on links:
  - 8fe88de0d5cc61395721cd8bda7b7ef2ea961760
  - f65ac79631180e77aca5a53fc557b3e1acfcbd65
  - 6aef5ee411656ec400e92fcc2bbd62e420645e0e

task-6038029

closes odoo/odoo#254000

--- a/addons/website/static/src/builder/translate.inside.scss
+++ b/addons/website/static/src/builder/translate.inside.scss
@@ -1,20 +1,20 @@
 html[lang] > body.editor_enable [data-oe-translation-state] {
-    &, .o_translation_select_option, &[data-oe-field="mega_menu_content"] * {
-        background-color: rgba($o-we-content-to-translate-color, 0.5) !important;
+    &, .o_translation_select_option {
+        --text-translate-highlight-color: #{rgba($o-we-content-to-translate-color, 0.5)};
     }
 
     &[data-oe-translation-state="translated"] {
-        &, .o_translation_select_option, &[data-oe-field="mega_menu_content"] * {
-            background-color: rgba($o-we-translated-content-color, 0.5) !important;
+        &, .o_translation_select_option {
+            --text-translate-highlight-color: #{rgba($o-we-translated-content-color, 0.5)};
         }
     }
 
     &.o_dirty, &.oe_translated, .oe_translated {
-        background-color: rgba($o-we-translated-content-color, 0.25) !important;
-
-        &[data-oe-field="mega_menu_content"] * {
-            background-color: rgba($o-we-translated-content-color, 0.25) !important;
-        }
+        --text-translate-highlight-color: #{rgba($o-we-translated-content-color, 0.25)};
+    }
+    
+    &, .o_translation_select_option, .oe_translated, &[data-oe-field="mega_menu_content"] *, .o_translation_state_inner_span {
+        background-color: var(--text-translate-highlight-color) !important;
     }
 }
 
